tests/PhiCore/compile_failure/src/container/string_view/construct_nullptr.fail.cpp
#include <phi/container/string_view.hpp>

int main()
{
    phi::string_view view(nullptr);
}
